Update page title to 'Daggerheart Mobile V0.7'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Daggerheart - Scheda Personaggio</title>
+    <title>Daggerheart Mobile V0.7</title>
     
     <!-- Librerie React e Tailwind -->
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
